# backtest

./: .gitignore  README.md  pyproject.toml
akquant/: __init__.py  akshare_provider.py  all_weather.py  all_weather_reporting.py  analytics.py  backtrader_engine.py  cli.py  comparison.py  comparison_reporting.py  config_loader.py  data.py  engine.py  factor_store.py  fundamentals.py  metrics.py  models.py  portfolio_registry.py  portfolio_reporting.py  portfolio_runner.py  portfolios.py  reporting.py  rules.py  screening.py  screening_reporting.py  stock_pool.py  strategies.py
docs/: a-share-valuation-screening-design.md  akquant-prd-architecture.md  project-standards.md
docs/superpowers/plans/: 2026-06-08-akquant-v01.md  2026-06-08-akshare-backtrader-all-weather.md
tests/: test_akshare_provider.py  test_all_weather_workflow.py  test_analytics_reporting.py  test_backtrader_engine.py  test_cli.py  test_comparison.py  test_engine.py  test_factor_store.py  test_fundamentals.py  test_portfolio_config.py  test_rules.py  test_screening.py  test_screening_reporting.py
tests/fixtures/: portfolio_bond.csv  portfolio_stock.csv  sample_bars.csv
