[project]
name = "akquant"
version = "0.1.0"
description = "A-share quantitative research and backtesting MVP."
requires-python = ">=3.11"
dependencies = [
    "akshare>=1.18",
    "backtrader>=1.9",
    "pandas>=2.0",
]

[project.scripts]
akquant = "akquant.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
